# home-automation-finance

./: Cargo.toml  README.md
src/: main.rs
src/db/: errors.rs  m_group.rs  mod.rs  utils.rs
src/router/: budget_categories.rs  budget_views.rs  budgets.rs  expense_categories.rs  expenses.rs  groups.rs  mod.rs  repeating_expenses.rs  saving_goals.rs  utils.rs
