[package]
name = "home_finance"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
axum = "0.7.9"
tokio = { version = "1.41.1", features = ["full"] }
serde = { version = "1.0.215", features = ["derive"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.16", features = ["env-filter", "json"] }
anyhow = "1.0.66"
serde_json = "1.0.133"
serde_derive = "1.0.215"
tower-http = { version = "0.6.2", features = ["trace"] }
reqwest = { version = "0.12.9", features = ["blocking", "json"] }
glob-match = "0.2.1"
