[package]
name = "home_finance"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
axum = "0.7.9"
tokio = { version = "1.41.1", features = ["full"] }
serde = { version = "1.0.215", features = ["derive"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.16", features = ["env-filter", "json"] }
anyhow = "1.0.66"
serde_json = "1.0.133"
serde_derive = "1.0.215"
tower-http = { version = "0.6.2", features = ["trace"] }
reqwest = { version = "0.12.9", features = ["blocking", "json"] }
glob-match = "0.2.1"
chrono = { version = "0.4.24", features = ["serde"] }
futures = { version = "0.3.31", default-features = false, features = [
    "async-await",
] }
thiserror = "2.0.3"
bson = { version = "2.13.0", features = ["chrono-0_4"] }
mongodb = { version = "3.1.0" }
dotenv = "0.15.0"
