[package]
name = "home_finance"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
axum = { version = "0.8.1", features = ["macros"] }
tokio = { version = "1.43.0", features = ["full"] }
serde = { version = "1.0.217", features = ["derive"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }
anyhow = "1.0.95"
serde_json = "1.0.138"
serde_derive = "1.0.217"
tower-http = { version = "0.6.2", features = ["trace"] }
reqwest = { version = "0.12.12", features = ["blocking", "json"] }
glob-match = "0.2.1"
chrono = { version = "0.4.39", features = ["serde"] }
futures = { version = "0.3.31", default-features = false, features = [
    "async-await",
] }
thiserror = "2.0.11"
bson = { version = "2.13.0", features = ["chrono-0_4"] }
mongodb = { version = "3.2.1" }
dotenv = "0.15.0"
